
* Added a new wrapped Watcher type that can throw exceptions as a convenience. The various
usingWatcher() methods now can take CuratorWatcher instances.

* InterProcessSemaphore and LeaderSelector weren't respecting the default bytes feature.

* Make the default data for nodes be the local IP address. This helps in debugging and enables
the deadlock analysis in Exhibitor.

1.1.9/1.0.10 - May, 10 2012
===========================
* Based on suggestion in Issue 67: Added new concept of UriSpec to the ServiceInstance in the
Service Discovery Curator extension.

* User "Pierre-Luc Bertrand" pointed out a potential race condition that would cause a SysConnected
to get sent before an Expired. So, now I push the event to the parent watcher before resetting
the connection in ConnectionState.process(WatchedEvent)

* New Feature: SessionFailRetryLoop. Huge thanks to Pierre-Luc Bertrand for his work on this.
SessionFailRetryLoop is a special type of retry loop that causes all Curator methods in a thread to
fail when a session failure is detected. This enables sets of Curator operations that must be tied
to a single ZooKeeper session. See Tech Note 3 for details: https://github.com/Netflix/curator/wiki/Tech-Note-3

* Several users have expressed dissatisfaction with the LeaderSelector implementation - requiring a
thread, etc. So, LeaderLatch has been added which behaves a lot like a CountDownLatch but for leader
selection.

1.1.8/1.0.9 - April 17, 2012
============================
* Added methods to compress data via create() and setData() and to decompress data via getData(). The
compression is GZIP by default. You can change this via the CuratorFrameworkFactory by specifying
a CompressionProvider.

* Added ZookeeperFactory to the client as a testing aid.

* Added ACLProvider to make it easier to use ACLs and recipes. It can be set via the
CuratorFrameworkFactory builder.
