@@ -135,6 +135,26 @@ public class QueueBuilder<T>
     }
 
     /**
+     * <p>Build a {@link DistributedDelayQueue} from the current builder values.</p>
+     *
+     * @return distributed delay queue
+     */
+    public DistributedDelayQueue<T>      buildDelayQueue()
+    {
+        return new DistributedDelayQueue<T>
+        (
+            client,
+            consumer,
+            serializer,
+            queuePath,
+            factory,
+            executor,
+            Integer.MAX_VALUE,
+            lockPath
+        );
+    }
+
+    /**
      * Change the thread factory used. The default is {@link Executors#defaultThreadFactory()}
      *
      * @param factory new thread factory to use
